Get Started with Salesforce Development/Create a Data Model Using Clicks/force-app/main/default/objects/House__c/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <label>Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>