Get Started with Salesforce Development/Create a Data Model Using Clicks/force-app/main/default/objects/House__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Address__c</columns>
    <columns>State__c</columns>
    <columns>City__c</columns>
    <columns>Zip__c</columns>
    <columns>Bedroom__c</columns>
    <columns>Bathrooms__c</columns>
    <columns>Price__c</columns>
    <columns>Picture__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>